# Rotulus

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py  test.txt
conf/: database.yml  rotulus.yml
rotulus/: __init__.py  database.py  hashid.py  query.py  record.py  seeder.py  swell.py
src/: database.py  hashid.py  query.py  seeder.py
