[metadata]
name = Rotulus
version = 0.1
url = https://github.com/x1n5h3n/{name}
home-page = {url}
description = Storage and query of leaked credentials databases made easy.
long-description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license-file = LICENSE
platform = any
classifiers =
	Intended Audience :: Hackers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
project_urls = 
    Bug Tracker = {url}/issues


[options]
python_requires = >= 3.0
packages = find:
scripts = bin/rotulus
setup_requires =
    setuptools
install_requires =
	psycopg2 >= 2.8
	asyncpg >= 0.20
    PyYAML >= 5.3 
